  * Bump Standards-Version to 4.6.0. No changes needed.

 -- Andreas Beckmann <anbe@debian.org>  Mon, 01 Nov 2021 11:23:02 +0100

nvidia-graphics-drivers (460.106.00-3) UNRELEASED; urgency=medium

  * Update kernel-5.7.0-set-memory-array.patch to fix kernel module build for
    ppc64el.
  * Backport mt_device_gre changes from 510.39.01 to fix kernel module build
    for arm64.

 -- Andreas Beckmann <anbe@debian.org>  Fri, 15 Apr 2022 22:56:54 +0200

nvidia-graphics-drivers (460.106.00-2) UNRELEASED; urgency=medium

  * Backport stdarg.h and stddef.h changes from 495.44 to fix kernel module
    build for Linux 5.16.
  * Backport pde_data changes from 470.103.01 to fix kernel module build for
    Linux 5.17.
  * dkms.conf: Use a BUILD_EXCLUSIVE equivalent hack to skip building for -rt
    kernels, not supported upstream (510.54-1).
  * Declare Testsuite: autopkgtest-pkg-dkms (510.54-1).

 -- Andreas Beckmann <anbe@debian.org>  Tue, 01 Mar 2022 21:31:18 +0100

nvidia-graphics-drivers (460.106.00-1) UNRELEASED; urgency=medium

  * New upstream Tesla release 460.106.00 (2021-10-26).

 -- Andreas Beckmann <anbe@debian.org>  Mon, 08 Nov 2021 14:43:35 +0100

nvidia-graphics-drivers (460.91.03-2) UNRELEASED; urgency=medium

  * Backport drm_device_has_pdev and set_current_state changes from 470.63.01
    to fix kernel module build for Linux 5.14.

 -- Andreas Beckmann <anbe@debian.org>  Tue, 21 Sep 2021 23:20:01 +0200

nvidia-graphics-drivers (460.91.03-1) unstable; urgency=medium

  * New upstream production branch release 460.91.03 (2021-07-20).
    * Fixed CVE-2021-1093, CVE-2021-1094, CVE-2021-1095.  (Closes: #991351)
      https://nvidia.custhelp.com/app/answers/detail/a_id/5211
    - Added support for the following GPUs: GeForce RTX 3070 Ti, CMP 50HX.
    * Fixed crash with certain DisplayPort devices.  (Closes: #989069)

  [ Andreas Beckmann ]
  * Update nv-readme.ids.
  * Drop manually added Depends: libcuda1 from libraries not referencing it.